2003-03-11  Bob Ippolito <bob@redivi.com>

    * twisted/internet/: Replaced apply() in non-deprecated 
    twisted.internet modules with Direct Function Calls per 
    recommendation from PEP 290.
    
    * twisted/web/client.py: HTTPPageGetter will now write 
    self.factory.postdata to the transport after the headers if the
    attribute is present and is not None.  The factories, getPage and
    downloadPage now accept keyword arguments for method, postdata, 
    and headers.  A Content-Length header will be automatically provided
    for the given postdata if one isn't already present.  Note that
    postdata is passed through raw; it is the user's responsibility to
    provide a Content-Type header and preformatted postdata.  This change
    should be backwards compatible.
    
2003-03-05  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/: reactor.run() now accepts a keyword
	argument, installSignalHandlers, indicating if signal handlers
	should be installed.

2003-03-04  Tommi Virtanen  <tv@twistedmatrix.com>

	* twisted/scripts/mktap.py, twisted/internet/app.py: mktap now
	accepts --uid=0 and --gid=0 to really mean root, has command line
	help for --uid=/--gid=, and understands user and group names in
	addition to numbers.

2003-03-04  Tommi Virtanen  <tv@twistedmatrix.com>

	* twisted/scripts/tap2deb.py, doc/man/tap2deb.1: Option --version=
	collided with global options, renamed to --set-version=.

2003-03-01  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/scripts/twistd.py: Added --report-profile flag to twistd
	daemon.

2003-02-24  Brian Warner  <warner@lothar.com>

	* twisted/internet/tcp.py, base.py: set FD_CLOEXEC on all new
	sockets (if available), so they will be closed when spawnProcess
	does its fork-and-exec.

2003-02-23  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/scripts/manhole.py: 1.4 manhole now defaults to using a
	GTK2 client where available.  Start manhole with the "--toolkit gtk1"